# hermeskill

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
demo/: __main__.py  _style.py  calibrate.py  hardkill.py  manualkill.py  rogue.py  run_dod.py
demo/.archived/langgraph_coding_agent/: __init__.py  agent.py
demo/coding_agent/: __init__.py  _bootstrap.py  _run_control_plane.py  agent.py
demo/coding_agent/sample_repo/: README.md  auth.py
demo/tests/: __init__.py  test_demo_smoke.py
deploy/: caspase-control-plane.service  dev-db-bootstrap.ps1  hermeskill-control-plane.service  setup.sh
docs/: demo.tape  launch.md  offline-demo.md  real-kill.md
scripts/: test_kill_event.py  test_kill_event2.py  verify_m1_1.py
