[project]
name = "caspase-workspace"
version = "0.0.0"
description = "Caspase — agent supervision via the apoptosis protocol"
requires-python = ">=3.14"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
caspase = { workspace = true }
caspase-control-plane = { workspace = true }
caspase-hermes = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.112",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["**/migrations/versions/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PTH", "RUF"]
ignore = ["E501", "B008", "RUF002"]

[tool.mypy]
python_version = "3.14"
strict = true
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["hermes_agent.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "--import-mode=importlib"
testpaths = ["packages/caspase-sdk/tests", "packages/caspase-control-plane/tests", "packages/caspase-hermes/tests"]
