[project]
name = "caspase-workspace"
version = "0.0.0"
description = "Caspase — agent supervision via the apoptosis protocol"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
caspase = { workspace = true }
caspase-control-plane = { workspace = true }
caspase-hermes = { workspace = true }
caspase-langgraph = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.112",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    # Workspace members — listed here so a bare `uv sync` (without
    # --all-packages) installs them editable into the venv. Without these,
    # `uv sync` would only install the workspace root, leaving caspase /
    # caspase-control-plane / caspase-hermes uninstalled — and Hermes'
    # entry-point scan would not discover the plugin.
    "caspase",
    "caspase-control-plane",
    "caspase-hermes",
    # The LangGraph adapter package + its [graph] extra (langgraph) so the
    # adapter's StateGraph integration tests run under a bare `uv sync`.
    "caspase-langgraph[graph]",
    # Real Hermes Agent in the workspace venv so 'uv run hermes ...' discovers
    # our caspase-hermes plugin via the hermes_agent.plugins entry-point group.
    # See README "Try it" section for the integration walkthrough.
    "hermes-agent>=0.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["**/migrations/versions/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PTH", "RUF"]
ignore = ["E501", "B008", "RUF002"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["hermes_agent.*", "langgraph.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "--import-mode=importlib"
testpaths = ["packages/caspase-sdk/tests", "packages/caspase-control-plane/tests", "packages/caspase-hermes/tests", "packages/caspase-langgraph/tests"]
